// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBeanCard component renders a .UserBeanCard by default 1`] = `
<div
  className="Bean"
>
  <div
    onClick={[Function]}
  >
    <ForwardRef(SvgIcon)
      className="cardlogo"
    />
    <h3
      className="Bean_name"
      style={
        Object {
          "margin": "5px",
        }
      }
    />
  </div>
</div>
`;

exports[`UserBeanCard component renders the UserBeanCard given props 1`] = `
<div
  className="Bean"
>
  <div
    onClick={[Function]}
  >
    <ForwardRef(SvgIcon)
      className="cardlogo"
    />
    <h3
      className="Bean_name"
      style={
        Object {
          "margin": "5px",
        }
      }
    >
      testname
    </h3>
  </div>
</div>
`;
